[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main/ui/chat/chat-nametag-panel.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/chat/ChatLineLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/chat/ChatLinePanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/ui/chat/chat-frame.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/chat/ChatPopTween.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/chat/chat-squish-tween.gd" type="Script" id=6]
[ext_resource path="res://src/main/ui/blogger-sans-bold-36.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/main/ui/chat/frame-pop-in.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/ui/chat/frame-pop-out.wav" type="AudioStream" id=14]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.188235, 0.188235, 0.376471, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="ChatFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
rect_pivot_offset = Vector2( 362, 79 )
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Defines the extents of the chat area."
}

[node name="PopTween" parent="." instance=ExtResource( 5 )]

[node name="SquishTween" type="Tween" parent="."]
script = ExtResource( 6 )

[node name="ChatLinePanel" parent="." instance=ExtResource( 3 )]
panel_sizes = [ Vector2( 420, 120 ), Vector2( 600, 120 ), Vector2( 600, 160 ), Vector2( 780, 160 ) ]

[node name="NametagPanel" type="Panel" parent="ChatLinePanel"]
margin_left = 180.0
margin_top = -60.0
margin_right = 540.0
margin_bottom = 4.57764e-05
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
panel_sizes = [ Vector2( 180, 60 ), Vector2( 360, 60 ), Vector2( 360, 60 ), Vector2( 240, 60 ), Vector2( 360, 60 ) ]

[node name="Small" type="Label" parent="ChatLinePanel/NametagPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -16.0
margin_right = 98.0
margin_bottom = 21.0
rect_scale = Vector2( 0.909, 0.909 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Lorem ipsu"
align = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Label" parent="ChatLinePanel/NametagPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -16.0
margin_right = 190.0
margin_bottom = 21.0
rect_scale = Vector2( 0.909, 0.909 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Lorem ipsum dolor s"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Large" type="Label" parent="ChatLinePanel/NametagPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -16.0
margin_right = 365.0
margin_bottom = 21.0
rect_scale = Vector2( 0.606, 0.909 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Lorem ipsum dolor sit amet"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraLarge" type="Label" parent="ChatLinePanel/NametagPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -23.0
margin_right = 400.0
margin_bottom = 57.0
rect_min_size = Vector2( 500, 80 )
rect_scale = Vector2( 0.4, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraExtraLarge" type="Label" parent="ChatLinePanel/NametagPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -23.0
margin_right = 600.0
margin_bottom = 57.0
rect_min_size = Vector2( 750, 80 )
rect_scale = Vector2( 0.4, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid"
align = 1
valign = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLineLabel" parent="." instance=ExtResource( 2 )]
panel_padding = Vector2( 60, 40 )
chat_line_panel_path = NodePath("../ChatLinePanel")

[node name="PopInSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -14.0
bus = "Sound Bus"

[node name="PopOutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -14.0
bus = "Sound Bus"

[connection signal="all_text_shown" from="ChatLineLabel" to="." method="_on_ChatLineLabel_all_text_shown"]
[connection signal="pop_out_completed" from="PopTween" to="." method="_on_Tween_pop_out_completed"]
